css/style.css
/* styles.css */

/* Reset default styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Set background color */
body {
  background-color: #f8f8f8;
  font-family: "Montserrat", sans-serif;
  padding-left: 5px; /* Add left padding */
  padding-right: 10px; /* Add right padding */
  overflow-x: hidden; 
}

/* Header styles */
header {
  background-color: #ffffff;
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.wrapper {
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
}

.nav-container {
  display: flex;
  justify-content: space-between; /* Distribute items evenly */
  align-items: center; /* Center vertically */
}

.logo img {
  max-width: 300px; /* Set a maximum width for the logo */
  padding-left: 32px;
  padding-right: 32px;
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
}

nav li {
  margin-right: 20px;
}

nav a {
  text-decoration: none;
  color: #000; /* Apply the specified color */
  font-family: Montserrat, sans-serif; /* Apply the specified font-family */
  font-size: 15px; /* Apply the specified font-size */
  font-style: normal; /* Apply the specified font-style */
  font-weight: 400; /* Apply the specified font-weight */
  line-height: normal; /* Apply the specified line-height */
  letter-spacing: 1.8px; /* Apply the specified letter-spacing */
  transition: color 0.3s;
}

nav a:hover {
  color: silver;
}

/* Banner section styles */
#banner {
  background-image: url('../images/banner.png');
  background-size: cover;
  background-position: center;
  color: #ffffff;
  height: 100%;
  text-align: center;
  padding: 150px 0;
  position: relative;
}


/* Styling for Individual Sections MAX WIDTH */
.banner-content{
  max-width: 800px;
  margin: 0 auto;
}

.about-content {
  max-width: 750px;
  margin: 0 auto;
}

.collection-content {
  max-width: 900px;
  margin: 0 auto;
  padding-top: 40px;
}

.luxury-content {
  margin: 0 auto;
}


/* Banner Section stylin */
.banner-content h1 {
  font-size: 65px;
  font-family: "Meie Script", sans-serif;
  margin-bottom: 20px;
  color: #fff;
  text-align: center;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: 2.88px;
  padding-top: 50px;
}

.banner-content p {
  font-size: 19px;
  margin-bottom: 60px;
  margin-top: 40px;
}

.banner-content button {
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.3s;
  width: 200px;
  padding: 10px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 20px;
  background: #DCDBD9;
}

.banner-content button:hover {
  background-color: silver;
}

/* Footer styles */
footer {
  background-color: #333;
  color: #ffffff;
  padding: 20px 0;
}

/* Additional styles for other sections would go here */

/* Media queries for responsiveness */
@media screen and (max-width: 768px) {
  nav ul {
    display: none;
  }
  /* Adjust styles for smaller screens */
  /* Example: hide navigation links or change font sizes */
}
@media (min-width: 768px) { /* Adjust the width as needed */
  .hamburger-icon {
    display: none;
  }
}

.menu.show-menu {
  /* Styles to display the menu (e.g., display: block) */
}

/* about us section */
#about-us {
  background-color: #F6F6F5; /* sets background color to light gray */
  padding: 100px 0;
  text-align: center;
}

/* about us section heading */
#about-us h2 {
  color: #000;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 28px;
  font-style: normal;
  font-weight: 200;
  line-height: normal;
  letter-spacing: 6.8px;
}

.about-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

/* about us section paragraph */
#about-us p, .services-text p {
  font-family: 'Montserrat', sans-serif; /* or a similar font */
  margin-bottom: 10px;
  font-size: 14px;
  color: rgba(0, 0, 0, 0.60);
  text-align: center;
  font-weight: 200;
  line-height: 2.5;
  letter-spacing: 3.8px;
}

/* about us section button */
#about-us a {
  display: flex;
  width: 222px;
  padding: 10px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 20px;
  background: #DCDBD9;
  color: #000;
  text-decoration: none;
}

.story-line{
  margin-top: 56px;
  width: 700px;
}

/* Add this to your existing CSS file or create a new one */

#new-collection {
  text-align: center;
  background-color: #FBFAF9;
  padding: 50px 0;
}

#new-collection h2 {
  color: #000;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 28px;
  font-style: normal;
  font-weight: 200;
  line-height: normal;
  letter-spacing: 6.8px;
}

.collection-items {
  display: flex;
  justify-content: space-between;
  margin-top: -354px;
}

.grey-bg{
  background-image: url('../images/grey_bg.png');
  display: flex;
  width:73%;
  margin-left: 125px;
  height: 350px;
  margin-top: 60px;
}


.collection-items img:last-child {
  margin-right: 0;
}


#new-collection p {
  color: rgba(0, 0, 0, 0.60);
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 13px;
  font-style: normal;
  font-weight: 500;
  line-height: 2;
  letter-spacing: 3.84px;
  margin-top: 75px;
}


#new-collection a  {
  display: flex;
  width: 129px;
  padding: 9px 10px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 20px;
  background: #7D7D7D;
  color: #fff;
  text-decoration: none;
}

.item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.item img {
  width: calc(81% - 10px);
  margin-right: 15px;
  margin-top: 30px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.item a {
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  color: #fff;
  text-decoration: none;
  background: #7D7D7D;
  padding: 9px 10px;
  border-radius: 15px;
  margin-top: 18px;
}


/* Style for the luxury service section */
#luxury-services {
  background-color: #F5F5F5;
  padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
}

.luxury-content {
  margin-top: 50px;
  display: flex;
  padding-bottom: 50px;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 10px; /* Adjust gap to control space between images and text */

 
}

/* Style for the image collage */
.image-collage {
  display: flex;
  flex-direction: row; /* Ensures images are in the same row */
  align-items: center;
  justify-content: left;
  flex: 1;
  padding: 20px;
}

.image-collage img {
  max-width: 40%;
  height: auto;
}

/* Style for the services text */
.services-text {
  margin-top: 60px;
  max-width: 100%;
  flex: 1;
  font-family: 'Montserrat', sans-serif;
  padding: 20px;
  margin-right: 5%;
  text-align: center;
  justify-content: left;
}

.image-bowl {
  /* No specific style needed here */
  margin-right: 10px;
}

.image-branches {
  /* Adjust margin to align the image as needed */
  margin-bottom: -180px;
}

.explore-button {
  background-color: #DCDBD9;
  color: #000;
  text-decoration: none;
  margin-top: 20px;
  display: inline-block;
  width: 222px;
  padding: 10px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 20px;
}

/* about us section heading */
.services-text h2 {
  color: #000;
  padding-bottom: 20px;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 28px;
  font-style: normal;
  font-weight: 250;
  line-height: normal;
  letter-spacing: 6.8px;
}


@media (max-width: 768px) {
  .luxury-content {
    flex-direction: column;
  }

  .services-text {
  }

  .image-collage {
    flex-direction: row; /* Stack images on smaller screens */
  }

  .image-branches {
    margin-bottom: -50px;
  }
}




/* Media query for smaller screens */
@media (max-width: 768px) {
  .collection-items {
      flex-direction: column;
      align-items: center;
  }

  .item {
    padding-bottom: 10px; /* Adjust spacing */
  }
  .item img {
    margin-top: 40px;
  }
  .item a {
    margin-top: 20px;
  }

  .grey-bg{
    background-image: none;
  }
}

/* Footer Style */
#site-footer {
  background-color: #FFFFFF;
  padding-right: 80px;
  padding-top: 80px;
  border-top: 1px solid #EAEAEA;
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  color: #000000;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.footer-left img {
  width: 260px;
}

.footer-center {
  flex: 2;
  display: flex;
  justify-content: left;
}

.footer-nav1, .footer-nav2 {
  display: flex;
  flex-direction:column;
  align-items: center;
}

.footer-nav1 ul, .footer-nav2 ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.footer-nav1 ul li{
  flex: 1 1 50%; /* Make each list item take up half the width of the container */
  text-align: left;
  padding-bottom: 5px;
}

.footer-nav2 ul li {
  flex: 1 1 50%; /* Make each list item take up half the width of the container */
  text-align: left;
  padding-right: -20px;
  padding-bottom: 5px;
}

.footer-nav1 ul li a, .footer-nav2 ul li a {
  text-decoration: none;
  color: #000000;
  font-size: 18px;
}

.footer-right {
  flex: 1;
  text-align: left;
}

.newsletter {
  margin-bottom: 10px;
  justify-content: left;
}

.newsletter p {
  margin: 0 0 10px 0;
  font-weight: 400;
  font-size: 18px;
}

.newsletter form {
  display: flex;
  align-items: center;
}

.newsletter input[type="email"] {
  padding: 8px;
  border: 1px solid #EAEAEA;
  border-radius: 5px;
  margin-right: 10px;
}

.newsletter button {
  padding: 8px 12px;
  border: none;
  background-color: #DCDBD9;
  color: #000000;
  cursor: pointer;
  border-radius: 5px;
}

.social-icons {
  display: flex;
  gap: 10px;
  justify-content: flex-end;
}

.social-icons a {
  display: inline-block;
}

.social-icons img {
  width: 24px;
  height: 24px;
}

.footer-bottom {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid #EAEAEA;
  padding-top: 10px;
  margin-top: 20px;
}

.footer-bottom a {
  text-decoration: none;
  color: #000000;
  font-size: 14px;
}

.footer-bottom p {
  margin: 0;
  font-size: 12px;
}

@media (max-width: 768px) {
  .footer-content {
    flex-direction: column;
    align-items: flex-start;
  }

  .footer-right {
    text-align: left;
    margin-top: 20px;
  }

  .footer-bottom {
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
  }
}

